<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/thumb_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/glad_you_ok"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/no_false_alerts_sent"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/close"
        android:layout_width="500dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_corners_gray"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/close"/>

</LinearLayout>