<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.randmcnally.crashdetection.widgets.ScrollViewExt
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/liability_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/liability"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/do_not_show_again_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/do_not_show_again"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="130dp"/>

        </LinearLayout>

    </com.randmcnally.crashdetection.widgets.ScrollViewExt>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

        <TextView
            android:id="@+id/reject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corners_gray"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/reject"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

        <TextView
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corners_red"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/accept"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

    </LinearLayout>

</RelativeLayout>