<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/crash_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settings_padding_left"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crash_notification"
                        android:textSize="@dimen/settings_line_1"
                        android:textColor="@color/settings_text_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crash_notification_info"
                        android:textSize="@dimen/settings_line_2"
                        android:textColor="@color/settings_text_gray"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="@dimen/settings_padding_left">

                <Switch
                    android:id="@+id/crash_notification_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_gray"
            android:layout_marginLeft="@dimen/settings_padding_left"
            android:layout_marginRight="@dimen/settings_padding_left"/>

        <LinearLayout
            android:id="@+id/paired_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settings_padding_left"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paired_phone"
                        android:textSize="@dimen/settings_line_1"
                        android:textColor="@color/settings_text_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/paired_phone_info"
                        android:textSize="@dimen/settings_line_2"
                        android:textColor="@color/settings_text_gray"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="@dimen/settings_padding_left">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="30dp"
                    android:src="@drawable/right_carret"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/paired_phone_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:layout_marginRight="35dp"
                    tools:text="Samsung Galaxy S7"
                    android:textSize="@dimen/settings_selection"
                    android:textColor="@color/settings_text_gray"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_gray"
            android:layout_marginLeft="@dimen/settings_padding_left"
            android:layout_marginRight="@dimen/settings_padding_left"/>

        <LinearLayout
            android:id="@+id/emergency_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settings_padding_left"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_contact"
                        android:textSize="@dimen/settings_line_1"
                        android:textColor="@color/settings_text_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_contact_info"
                        android:textSize="@dimen/settings_line_2"
                        android:textColor="@color/settings_text_gray"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="@dimen/settings_padding_left">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="30dp"
                    android:src="@drawable/right_carret"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/emergency_contact_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:layout_marginRight="35dp"
                    tools:text="My Wife"
                    android:textSize="@dimen/settings_selection"
                    android:textColor="@color/settings_text_gray"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_gray"
            android:layout_marginLeft="@dimen/settings_padding_left"
            android:layout_marginRight="@dimen/settings_padding_left"/>

        <LinearLayout
            android:id="@+id/accident_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settings_padding_left"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accident_call"
                        android:textSize="@dimen/settings_line_1"
                        android:textColor="@color/settings_text_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accident_call_info"
                        android:textSize="@dimen/settings_line_2"
                        android:textColor="@color/settings_text_gray"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="@dimen/settings_padding_left">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="30dp"
                    android:src="@drawable/right_carret"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/accident_call_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:layout_marginRight="35dp"
                    tools:text="Emergency Contact"
                    android:textSize="@dimen/settings_selection"
                    android:textColor="@color/settings_text_gray"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_gray"
            android:layout_marginLeft="@dimen/settings_padding_left"
            android:layout_marginRight="@dimen/settings_padding_left"/>

        <LinearLayout
            android:id="@+id/test_crash_detection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/settings_padding_left"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test_crash_detection"
                        android:textSize="@dimen/settings_line_1"
                        android:textColor="@color/settings_text_gray"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test_crash_detection_info"
                        android:textSize="@dimen/settings_line_2"
                        android:textColor="@color/settings_text_gray"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>