<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/controls">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/alert"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/car_crash_detected"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:layout_marginTop="-5dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:shadowRadius="2.0"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="130"
            android:background="@color/red">

            <TextView
                android:id="@+id/calling_help_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:textAllCaps="true"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/calling_for_help_in"
                android:paddingBottom="20dp"/>

            <RelativeLayout
                android:layout_width="@dimen/count_down_circle_size"
                android:layout_height="@dimen/count_down_circle_size"
                android:layout_below="@+id/calling_help_title"
                android:layout_centerHorizontal="true">

                <com.randmcnally.crashdetection.widgets.Circle
                    android:id="@+id/countdown_circle"
                    android:layout_width="@dimen/count_down_circle_size"
                    android:layout_height="@dimen/count_down_circle_size"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/seconds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        tools:text="20"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="100sp"
                        android:layout_marginTop="-20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="26sp"
                        android:textAllCaps="true"
                        android:text="@string/seconds"
                        android:layout_marginTop="-10dp"/>
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:text="@string/need_help"
                android:textSize="16sp"
                android:gravity="center"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingRight="30dp"
                    android:paddingLeft="30dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"/>

                    <TextView
                        android:id="@+id/call_911"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:background="@drawable/round_corners_red"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="@string/call_911"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"/>

                    <TextView
                        android:id="@+id/call_contact"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:background="@drawable/round_corners_red"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="Call Wife"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"/>

                    <TextView
                        android:id="@+id/cancel_ok"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="30"
                        android:background="@drawable/round_corners_gray"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:text="@string/cancel_ok"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>